<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".25"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/birdImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/bird" />

    <TextView
        android:id="@+id/birdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/bird_text"
        android:visibility="invisible"
        android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".25"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/catImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/cat" />

    <TextView
        android:id="@+id/catText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/cat_text"
        android:visibility="invisible"
        android:layout_gravity="center_vertical"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".25"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/dogImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/dog" />

    <TextView
        android:id="@+id/dogText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/dog_text"
        android:visibility="invisible"
        android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".25"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/rotate" />

            <Button
                android:id="@+id/flip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/flip" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:id="@+id/arrowUp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_toEndOf="@+id/arrowBack"
                app:srcCompat="@drawable/ic_arrow_upward_black_24dp" />

            <ImageView
                android:id="@+id/pad"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/arrowUp"
                android:layout_toEndOf="@+id/arrowBack"
                app:srcCompat="@drawable/ic_filter_center_focus_black_24dp" />

            <ImageView
                android:id="@+id/arrowBack"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/arrowUp"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

            <ImageView
                android:id="@+id/arrowForward"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/arrowUp"
                android:layout_toEndOf="@+id/pad"
                app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

            <ImageView
                android:id="@+id/arrowDown"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/pad"
                android:layout_toEndOf="@+id/arrowBack"
                app:srcCompat="@drawable/ic_arrow_downward_black_24dp" />

        </RelativeLayout>
    </LinearLayout>


</LinearLayout>